[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/zylann.hterrain/tools/brush/brush_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/zylann.hterrain/tools/util/interval_slider.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="BrushEditor" type="Control"]
margin_right = 306.0
margin_bottom = 110.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushShapeButton" type="Button" parent="."]
anchor_bottom = 1.0
margin_right = 50.0
rect_min_size = Vector2( 50, 0 )

[node name="TextureRect" type="TextureRect" parent="BrushShapeButton"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
margin_left = 54.0
margin_right = -7.0
margin_bottom = 144.0
size_flags_horizontal = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushSizeLabel" type="Label" parent="GridContainer"]
margin_top = 1.0
margin_right = 89.0
margin_bottom = 15.0
text = "Brush size"

[node name="BrushSizeControl" type="HBoxContainer" parent="GridContainer"]
margin_left = 93.0
margin_right = 245.0
margin_bottom = 16.0
mouse_filter = 0
size_flags_horizontal = 3

[node name="Slider" type="HSlider" parent="GridContainer/BrushSizeControl"]
margin_right = 118.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 2.0
max_value = 500.0
value = 2.0
exp_edit = true
rounded = true

[node name="Label" type="Label" parent="GridContainer/BrushSizeControl"]
margin_left = 122.0
margin_top = 1.0
margin_right = 152.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
text = "999"
align = 2

[node name="BrushOpacityLabel" type="Label" parent="GridContainer"]
margin_top = 21.0
margin_right = 89.0
margin_bottom = 35.0
text = "Brush opacity"

[node name="BrushOpacityControl" type="HBoxContainer" parent="GridContainer"]
margin_left = 93.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Slider" type="HSlider" parent="GridContainer/BrushOpacityControl"]
margin_right = 118.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Label" type="Label" parent="GridContainer/BrushOpacityControl"]
margin_left = 122.0
margin_top = 1.0
margin_right = 152.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
text = "999"
align = 2

[node name="FlattenHeightLabel" type="Label" parent="GridContainer"]
margin_top = 45.0
margin_right = 89.0
margin_bottom = 59.0
text = "Flatten height"

[node name="HB" type="HBoxContainer" parent="GridContainer"]
margin_left = 93.0
margin_top = 40.0
margin_right = 245.0
margin_bottom = 64.0

[node name="FlattenHeightControl" type="SpinBox" parent="GridContainer/HB"]
margin_right = 110.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -500.0
max_value = 500.0
step = 0.01

[node name="FlattenHeightPickButton" type="Button" parent="GridContainer/HB"]
margin_left = 114.0
margin_right = 152.0
margin_bottom = 24.0
toggle_mode = true
text = "Pick"

[node name="ColorLabel" type="Label" parent="GridContainer"]
margin_top = 71.0
margin_right = 89.0
margin_bottom = 85.0
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="GridContainer"]
margin_left = 93.0
margin_top = 68.0
margin_right = 245.0
margin_bottom = 88.0
toggle_mode = false
color = Color( 1, 1, 1, 1 )

[node name="DensityLabel" type="Label" parent="GridContainer"]
margin_top = 97.0
margin_right = 89.0
margin_bottom = 111.0
text = "Detail density"

[node name="DensitySlider" type="HSlider" parent="GridContainer"]
margin_left = 93.0
margin_top = 92.0
margin_right = 245.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 24 )
max_value = 1.0
step = 0.1

[node name="HoleLabel" type="Label" parent="GridContainer"]
margin_top = 125.0
margin_right = 89.0
margin_bottom = 139.0
text = "Draw holes"

[node name="HoleCheckbox" type="CheckBox" parent="GridContainer"]
margin_left = 93.0
margin_top = 120.0
margin_right = 245.0
margin_bottom = 144.0

[node name="SlopeLimitLabel" type="Label" parent="GridContainer"]
margin_top = 149.0
margin_right = 89.0
margin_bottom = 163.0
text = "Slope limit"

[node name="SlopeLimit" type="Control" parent="GridContainer"]
margin_left = 93.0
margin_top = 148.0
margin_right = 245.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 16 )
script = ExtResource( 3 )
range = Vector2( 0, 90 )

[node name="Temp" type="Node" parent="."]

[connection signal="pressed" from="BrushShapeButton" to="." method="_on_BrushShapeButton_pressed"]
[connection signal="pressed" from="GridContainer/HB/FlattenHeightPickButton" to="." method="_on_FlattenHeightPickButton_pressed"]
